# ginkgo

./: .gitignore  README.md  pyproject.toml
client/: arxiv.py  base.py  grobid.py
config/: client.py  llm.py  nlp.py
examples/: extract.ipynb  pipeline.ipynb  relation.ipynb
examples/output/: 1706.03762.tei.xml  1706.03762_Applications_of_Attention_in_our_Model_entities.json  1706.03762_Attention_entities.json  1706.03762_Background_entities.json  1706.03762_Embeddings_and_Softmax_entities.json  1706.03762_Encoder_and_Decoder_Stacks_entities.json  1706.03762_Hardware_and_Schedule_entities.json  1706.03762_Introduction_entities.json  1706.03762_Label_Smoothing_entities.json  1706.03762_Model_Architecture_entities.json  1706.03762_Multi-Head_Attention_entities.json  1706.03762_Optimizer_entities.json  1706.03762_Position-wise_Feed-Forward_Networks_entities.json  1706.03762_Positional_Encoding_entities.json  1706.03762_Regularization_entities.json  1706.03762_Scaled_Dot-Product_Attention_entities.json  1706.03762_Training_Data_and_Batching_entities.json  1706.03762_Why_Self-Attention_entities.json  1706.03762_all_entities.json  1706.03762_full_text.txt  1706.03762_relations.json  1810.04805.tei.xml  1810.04805_A.3_Fine-tuning_Procedure_entities.json  1810.04805_Bert_e_entities.json  (+47 more)
models/: document.py  entities.py  grobid.py
nlp/: coreference.py  entity_filter.py  entity_pairs.py  parse_tree.py  relation.py  semantic.py  semantics.py  structural.py  syntactic.py
parsers/: tei.py
pipeline/: extract.py  ingest.py
utils/: clean_text.py  format_text.py  text.py
(+14 files in other folders)
