[project]
name = "ginkgo"
version = "0.1.0"
description = "backend "
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "google-genai>=1.45.0",
    "langextract>=1.0.9",
    "lxml>=6.0.2",
    "numpy>=2.3.4",
    "pydantic>=2.12.3",
    "pydantic-settings>=2.11.0",
    "scikit-learn>=1.7.2",
    "sentence-transformers>=5.1.2",
    "spacy>=3.8.7",
    "torch>=2.9.0",
]

[dependency-groups]
dev = [
    "pip>=25.2",
]
